Reduces static usage and fixes signshop reload